--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+autopep8==1.5.7
 click==8.0.1
 Flask==1.1.2
+gunicorn==20.0.4
 importlib-metadata==4.8.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+pycodestyle==2.7.0
+toml==0.10.2
 typing-extensions==3.10.0.2
 Werkzeug==2.0.1
 zipp==3.5.0
